--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="./style.css">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My TODO List</title>
     <script src="utils.js"></script>
   </head>
-  <body></body>
+  <body>
+    <script src="./main.js"></script>
+  </body>
 </html>
