--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,27 @@
     <script src="utils.js"></script>
   </head>
   <body>
+
+    <div id="main-container">
+      <h1 id="h1">To-Do List</h1>
+      <section class="control-section">
+        <form id="add-form">
+          <input type="text" id="text-input">
+          <select name="priority" id="priority-selector">
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+          </select>
+          <button id="add-button">Add</button>
+      </form>
+      </section>
+      <section id="view-section">
+      </section>
+
+    </div>
     <script src="./main.js"></script>
+
   </body>
 </html>
