--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,10 @@
   <body>
 
     <div id="main-container">
-      <h1 id="h1">To-Do List</h1>
+      <header>
+        <h1 id="h1">To-Do List</h1>
+        <p id="counter-paragraph">Do you have <span>0 task</span> to do</p>
+      </header>
       <section class="control-section">
         <form id="add-form">
           <input type="text" id="text-input">
