--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -24,7 +26,8 @@
           <option value="4">4</option>
           <option value="5">5</option>
           </select>
-          <button id="add-button">Add</button>
+          <button class="buttons" id="add-button">Add</button>
+          <button class="buttons" id="sort-button">Sort</button>
       </form>
       </section>
       <section id="view-section">
