--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
       </header>
       <section class="control-section">
         <form id="add-form">
-          <input type="text" id="text-input">
+          <input type="text" id="text-input" required>
           <select name="priority" id="priority-selector">
           <option value="1">1</option>
           <option value="2">2</option>
@@ -27,8 +27,8 @@
           <option value="5">5</option>
           </select>
           <button class="buttons" id="add-button">Add</button>
-          <button class="buttons" id="sort-button">Sort</button>
-      </form>
+        </form>
+        <button class="buttons" id="sort-button">Sort</button>
       </section>
       <section id="view-section">
       </section>
