all test passed!

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <div id="main-container">
       <header>
         <h1 id="h1">To-Do List</h1>
-        <p id="counter-paragraph">Do you have <span>0 task</span> to do</p>
+        <p id="counter-paragraph">Do you have <span id="counter">0</span><span id="span-task"> task</span> to do</p>
       </header>
       <section class="control-section">
         <form id="add-form">
