--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <meta charset="UTF-8" />
@@ -27,9 +26,13 @@
           <option value="4">4</option>
           <option value="5">5</option>
           </select>
-          <button class="buttons" id="add-button">Add</button>
+          <button class="buttons" id="add-button" placeholder="new task">Add</button>
         </form>
         <button class="buttons" id="sort-button">Sort</button>
+        <section id="search-section">
+          <input type="text" id="text-search" placeholder="search task" type="search">
+          <button class="buttons" id="search-button">search</button>
+        </section>
       </section>
       <section id="view-section">
       </section>
