add undo button

--- a/src/index.html
+++ b/src/index.html
@@ -32,9 +32,11 @@
         <section id="search-section">
           <input type="text" id="text-search" placeholder="search task" type="search">
           <button class="buttons" id="search-button">search</button>
+          <img src="./images/undo.jpg" alt="undo" class="buttons" id="undo">
         </section>
       </section>
       <section id="view-section">
+        <div class="loader"></div>
       </section>
 
     </div>
