add sort by dates option.

--- a/src/index.html
+++ b/src/index.html
@@ -28,10 +28,11 @@
           </select>
           <button class="buttons" id="add-button" placeholder="new task">Add</button>
         </form>
-        <button class="buttons" id="sort-button">Sort</button>
+        <button class="buttons" id="sort-button">Sort By Priority</button>
         <section id="search-section">
           <input type="text" id="text-search" placeholder="search task" type="search">
-          <button class="buttons" id="search-button">search</button>
+          <button class="buttons" id="search-button">Search</button>
+          <button class="buttons" id="date-sort">Oldest</button>
           <img src="./images/undo.jpg" alt="undo" class="buttons" id="undo">
         </section>
       </section>
