--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
       <section class="control-section">
         <header>
           <h1 id="h1">To-Do List</h1>
+          <button class="buttons" id="restore">Clear the board</button>
           <p id="counter-paragraph">Do you have <span id="counter">0</span><span id="span-task"> task</span> to do</p>
         </header>
         <form id="add-form">
