change async to promise

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
         <header>
           <h1 id="h1">To-Do List</h1>
           <button class="buttons" id="restore">Clear the board</button>
+          <div class="loader"></div>
           <p id="counter-paragraph">Do you have <span id="counter">0</span><span id="span-task"> task</span> to do</p>
         </header>
         <form id="add-form">
@@ -39,11 +40,11 @@
         </section>
       </section>
       <section id="view-section" class="view">
-        <div class="loader"></div>
       </section>
 
     </div>
     <script src="./main.js"></script>
+    <script src="./utils.js"></script>
 
   </body>
 </html>
